--- a/config/feb2-fse125.yml
+++ b/config/feb2-fse125.yml
@@ -1,16 +1,16 @@
 dicom-series:
-  empty-plastic: '/Users/artoews/root/data/mri/240202/14446_dicom/Series24'
-  empty-plastic-2: '/Users/artoews/root/data/mri/240202/14446_dicom/Series25'
-  empty-metal: '/Users/artoews/root/data/mri/240202/14446_dicom/Series30'
-  empty-metal-2: '/Users/artoews/root/data/mri/240202/14446_dicom/Series31'
-  lattice-plastic: '/Users/artoews/root/data/mri/240202/14446_dicom/Series14'
-  lattice-metal: '/Users/artoews/root/data/mri/240202/14446_dicom/Series18'
-  lattice-plastic-hr: '/Users/artoews/root/data/mri/240202/14446_dicom/Series4'
+  uniform-plastic: '/Users/artoews/root/data/mri/240202/14446_dicom/Series24'
+  uniform-plastic-2: '/Users/artoews/root/data/mri/240202/14446_dicom/Series25'
+  uniform-metal: '/Users/artoews/root/data/mri/240202/14446_dicom/Series30'
+  uniform-metal-2: '/Users/artoews/root/data/mri/240202/14446_dicom/Series31'
+  structured-plastic: '/Users/artoews/root/data/mri/240202/14446_dicom/Series14'
+  structured-metal: '/Users/artoews/root/data/mri/240202/14446_dicom/Series18'
+  structured-plastic-reference: '/Users/artoews/root/data/mri/240202/14446_dicom/Series4'
 
 params:
   slice: [[38, 158], [66, 186], [12, 48]]
   IA-thresh-relative: 0.3
   GD-thresh-pixels: 1
-  psf-window-size: [40, 40, 20]
-  psf-stride: 5
+  psf-window-size: [14, 14, 10]
+  psf-stride: 3
   num-workers: 8
