--- a/config/feb2-fse125.yml
+++ b/config/feb2-fse125.yml
@@ -12,5 +12,6 @@ params:
   IA-thresh-relative: 0.3
   GD-thresh-pixels: 1
   psf-window-size: [14, 14, 10]
+  psf-shape: [5, 5, 1]
   psf-stride: 1
   num-workers: 8
