--- a/config/mar4-fse125.yml
+++ b/config/mar4-fse125.yml
@@ -1,5 +1,7 @@
 root: '/Users/artoews/root/data/mri/240304/14660_dicom/'
-slice: [[38, 158], [66, 186], [12, 48]]
+# slice: [[38, 158], [66, 186], [12, 48]]
+slice: [[30, 163], [61, 194], [14, 48]]
+# slice: [[22, 170], [53, 202], [12, 48]]
 dicom-series:
   structured-plastic-reference: 'Series2'
   structured-plastic: 'Series3'
